--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- adicionando os arquivos css -->
      <link rel="stylesheet" href="assets/css/header.css">
-     <link rel="stylesheet" href="blob/main/assets/css/global.css">
+     <link rel="stylesheet" href="assets/css/global.css">
      <link rel="stylesheet" href="assets/css/acordeon.css">
      <link rel="stylesheet" href="assets/css/lenguagens.css">
      <link rel="stylesheet" href="assets/css/portfolio.css">
