--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <div class="informations">
                 <p class="local" id="profileLocation">Carregando...</p>
                 <p class="whats">
-                    <a id="profilePhone">Carregando...</a></p>
+                    <a href="+55 34 9 99773-3335" id="profilePhone">Carregando...</a></p>
                 <p class="mail">
-                    <a id="profileMail">Carregando...</a>
+                    <a  id="profileMail">Carregando...</a>
                 </p>
     
             </div>
