--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LUMENS - Portfólio</title>
-  <link rel="icon" type="image/x-icon" href="/assets/img/logo_icon.ico">
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="icon" type="image/x-icon" href="https://github.com/lumens7/SitePessoal/blob/main/assets/img/logo_icon.ico">
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
   <div class="lumens-container">
-    <a href="/assets/page/home.html#Lideranca" class="letter-block"><span class="char">L</span><span class="word">LIDERANÇA</span></a>
-    <a href="/assets/page/home.html#Uniao" class="letter-block"><span class="char">U</span><span class="word">UNIÃO</span></a>
-    <a href="/assets/page/home.html#Motivacao" class="letter-block"><span class="char">M</span><span class="word">MOTIVAÇÃO</span></a>
-    <a href="/assets/page/home.html#Excelencia" class="letter-block"><span class="char">E</span><span class="word">EXCELÊNCIA</span></a>
-    <a href="/assets/page/home.html#Networking" class="letter-block"><span class="char">N</span><span class="word">NETWORKING</span></a>
-    <a href="/assets/page/home.html#Superacao" class="letter-block"><span class="char">S</span><span class="word">SUPERAÇÃO</span></a>
+    <a href="assets/page/home.html#Lideranca" class="letter-block"><span class="char">L</span><span class="word">LIDERANÇA</span></a>
+    <a href="assets/page/home.html#Uniao" class="letter-block"><span class="char">U</span><span class="word">UNIÃO</span></a>
+    <a href="assets/page/home.html#Motivacao" class="letter-block"><span class="char">M</span><span class="word">MOTIVAÇÃO</span></a>
+    <a href="assets/page/home.html#Excelencia" class="letter-block"><span class="char">E</span><span class="word">EXCELÊNCIA</span></a>
+    <a href="assets/page/home.html#Networking" class="letter-block"><span class="char">N</span><span class="word">NETWORKING</span></a>
+    <a href="assets/page/home.html#Superacao" class="letter-block"><span class="char">S</span><span class="word">SUPERAÇÃO</span></a>
   </div>
 
-  <script src="/assets/js/script.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
