--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <div class="lumens-container">
-    <a href="assets/page/home.html#Lideranca" class="letter-block"><span class="char">L</span><span class="word">LIDERANÇA</span></a>
-    <a href="assets/page/home.html#Uniao" class="letter-block"><span class="char">U</span><span class="word">UNIÃO</span></a>
-    <a href="assets/page/home.html#Motivacao" class="letter-block"><span class="char">M</span><span class="word">MOTIVAÇÃO</span></a>
-    <a href="assets/page/home.html#Excelencia" class="letter-block"><span class="char">E</span><span class="word">EXCELÊNCIA</span></a>
-    <a href="assets/page/home.html#Networking" class="letter-block"><span class="char">N</span><span class="word">NETWORKING</span></a>
-    <a href="assets/page/home.html#Superacao" class="letter-block"><span class="char">S</span><span class="word">SUPERAÇÃO</span></a>
+    <a href="assets/home.html#Lideranca" class="letter-block"><span class="char">L</span><span class="word">LIDERANÇA</span></a>
+    <a href="assets/home.html#Uniao" class="letter-block"><span class="char">U</span><span class="word">UNIÃO</span></a>
+    <a href="assets/home.html#Motivacao" class="letter-block"><span class="char">M</span><span class="word">MOTIVAÇÃO</span></a>
+    <a href="assets/home.html#Excelencia" class="letter-block"><span class="char">E</span><span class="word">EXCELÊNCIA</span></a>
+    <a href="assets/home.html#Networking" class="letter-block"><span class="char">N</span><span class="word">NETWORKING</span></a>
+    <a href="assets/home.html#Superacao" class="letter-block"><span class="char">S</span><span class="word">SUPERAÇÃO</span></a>
   </div>
 
   <script src="assets/js/script.js"></script>
