--- a/assets/habilidades.html
+++ b/assets/habilidades.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LUMENS - HABILIDADES</title>
-  <link rel="icon" type="image/x-icon" href="/assets/img/logo_icon.ico" />
+  <link rel="icon" type="image/x-icon" href="https://github.com/lumens7/SitePessoal/tree/main/assets/img/logo_icon.ico" />
   <link rel="stylesheet" href="/assets/css/menu.css" />
   <link rel="stylesheet" href="/assets/css/habilidades.css" />
 </head>
@@ -12,18 +12,18 @@
   <header class="menu-topo">
     <img src="#" alt="Abrir menu" id="menu-btn" class="icon_menu" />
     <nav class="navbar" id="navbar">
-      <img src="/assets/img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close" />
-      <a href="/assets/page/home.html" class="link_menu">
-        <img src="/assets/img/svg/home.svg" alt="Home" class="icon_menu" /> INÍCIO
+      <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close" />
+      <a href="/assets/home.html" class="link_menu">
+        <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/home.svg" alt="Home" class="icon_menu" /> INÍCIO
       </a>
-      <a href="/assets/page/projetos.html" class="link_menu">
-        <img src="/assets/img/svg/projects.svg" alt="Projetos" class="icon_menu" /> PROJETOS
+      <a href="/assets/projetos.html" class="link_menu">
+        <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/projects.svg" alt="Projetos" class="icon_menu" /> PROJETOS
       </a>
-      <a href="/assets/page/habilidades.html" class="link_menu">
-        <img src="/assets/img/svg/keyboard.svg" alt="Habilidades" class="icon_menu" /> HABILIDADES
+      <a href="/assets/habilidades.html" class="link_menu">
+        <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/keyboard.svg" alt="Habilidades" class="icon_menu" /> HABILIDADES
       </a>
-      <a href="/assets/page/experiencia.html" class="link_menu">
-        <img src="/assets/img/svg/work.svg" alt="Experiência" class="icon_menu" /> EXPERIÊNCIA
+      <a href="/assets/experiencia.html" class="link_menu">
+        <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/work.svg" alt="Experiência" class="icon_menu" /> EXPERIÊNCIA
       </a>
     </nav>
     <label class="switch">
@@ -64,7 +64,7 @@
 </main>
 
 
-  <script src="/assets/js/habilidades.js"></script>
-  <script src="/assets/js/menu.js"></script>
+  <script src="assets/js/habilidades.js"></script>
+  <script src="assets/js/menu.js"></script>
 </body>
 </html>
