--- a/assets/habilidades.html
+++ b/assets/habilidades.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LUMENS - HABILIDADES</title>
   <link rel="icon" type="image/x-icon" href="https://github.com/lumens7/SitePessoal/tree/main/assets/img/logo_icon.ico" />
-  <link rel="stylesheet" href="/assets/css/menu.css" />
-  <link rel="stylesheet" href="/assets/css/habilidades.css" />
+  <link rel="stylesheet" href="https://github.com/lumens7/SitePessoal/tree/main/assets/css/menu.css" />
+  <link rel="stylesheet" href="https://github.com/lumens7/SitePessoal/tree/main/assets/css/habilidades.css" />
 </head>
 <body>
   <header class="menu-topo">
@@ -64,7 +64,7 @@
 </main>
 
 
-  <script src="assets/js/habilidades.js"></script>
-  <script src="assets/js/menu.js"></script>
+  <script src="https://github.com/lumens7/SitePessoal/tree/main/assets/js/habilidades.js"></script>
+  <script src="https://github.com/lumens7/SitePessoal/tree/main/assets/js/menu.js"></script>
 </body>
 </html>
