--- a/assets/projetos.html
+++ b/assets/projetos.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LUMENS - PROJETOS</title>
   <link rel="icon" type="image/x-icon" href="https://github.com/lumens7/SitePessoal/tree/main/assets/img/logo_icon.ico">
-  <link rel="stylesheet" href="assets/css/menu.css" />
-  <link rel="stylesheet" href="assets/css/projetos.css" />
+  <link rel="stylesheet" href="https://github.com/lumens7/SitePessoal/tree/main/assets/css/menu.css" />
+  <link rel="stylesheet" href="https://github.com/lumens7/SitePessoal/tree/main/assets/css/projetos.css" />
 </head>
 <body>
   <header class="menu-topo">
@@ -44,7 +44,7 @@
     <!-- JS vai preencher os projetos aqui -->
   </div>
 
-  <script src="assets/js/menu.js"></script>
-  <script src="assets/js/projetos.js"></script>
+  <script src="https://github.com/lumens7/SitePessoal/tree/main/assets/js/menu.js"></script>
+  <script src="https://github.com/lumens7/SitePessoal/tree/main/assets/js/projetos.js"></script>
 </body>
 </html>
