--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LUMENS - Portfólio</title>
   <link rel="icon" type="image/x-icon" href="https://github.com/lumens7/SitePessoal/blob/main/assets/img/logo_icon.ico">
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="https://github.com/lumens7/SitePessoal/tree/main/assets/css/style.css" />
 </head>
 <body>
   <div class="lumens-container">
@@ -17,6 +17,6 @@
     <a href="assets/home.html#Superacao" class="letter-block"><span class="char">S</span><span class="word">SUPERAÇÃO</span></a>
   </div>
 
-  <script src="assets/js/script.js"></script>
+  <script src="https://github.com/lumens7/SitePessoal/tree/main/assets/js/script.js"></script>
 </body>
 </html>
