--- a/assets/experiencia.html
+++ b/assets/experiencia.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LUMENS - HABILIDADES</title>
     <link rel="icon" type="image/x-icon" href="https://github.com/lumens7/SitePessoal/tree/main/assets/img/logo_icon.ico" />
-    <link rel="stylesheet" href="/assets/css/menu.css" />
-    <link rel="stylesheet" href="/assets/css/experiencia.css" />
+    <link rel="stylesheet" href="https://github.com/lumens7/SitePessoal/tree/main/assets/css/menu.css" />
+    <link rel="stylesheet" href="https://github.com/lumens7/SitePessoal/tree/main/assets/css/experiencia.css" />
 </head>
 <body>
     <header class="menu-topo">
@@ -38,7 +38,7 @@
         </div>
     </section>
 
-  <script src="assets/js/menu.js"></script>
-  <script src="assets/js/experiencia.js"></script>
+  <script src="https://github.com/lumens7/SitePessoal/tree/main/assets/js/menu.js"></script>
+  <script src="https://github.com/lumens7/SitePessoal/tree/main/assets/js/experiencia.js"></script>
 </body>
 </html>
