--- a/assets/home.html
+++ b/assets/home.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LUMENS - INICIO</title>
   <link rel="icon" type="image/x-icon" href="https://github.com/lumens7/SitePessoal/tree/main/assets/img/logo_icon.ico" />
-  <link rel="stylesheet" href="assets/css/menu.css" />
-  <link rel="stylesheet" href="assets/css/style_home.css" />
+  <link rel="stylesheet" href="https://github.com/lumens7/SitePessoal/tree/main/assets/css/menu.css" />
+  <link rel="stylesheet" href="https://github.com/lumens7/SitePessoal/tree/main/assets/css/style_home.css" />
 </head>
 <body>
 
@@ -47,7 +47,7 @@
     <!-- Seções de valores inseridas via JS -->
   </main>
 
-  <script src="assets/js/menu.js"></script>
-  <script src="assets/js/home.js"></script>
+  <script src="https://github.com/lumens7/SitePessoal/tree/main/assets/js/menu.js"></script>
+  <script src="https://github.com/lumens7/SitePessoal/tree/main/assets/js/home.js"></script>
 </body>
 </html>
