--- a/assets/habilidades.html
+++ b/assets/habilidades.html
@@ -4,26 +4,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LUMENS - HABILIDADES</title>
-  <link rel="icon" type="image/x-icon" href="https://github.com/lumens7/SitePessoal/tree/main/assets/img/logo_icon.ico" />
-  <link rel="stylesheet" href="https://github.com/lumens7/SitePessoal/tree/main/assets/css/menu.css" />
-  <link rel="stylesheet" href="https://github.com/lumens7/SitePessoal/tree/main/assets/css/habilidades.css" />
+
+  <!-- Ícone -->
+  <link rel="icon" href="assets/img/logo_icon.ico" type="image/x-icon">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="assets/css/menu.css" />
+  <link rel="stylesheet" href="assets/css/habilidades.css" />
 </head>
 <body>
   <header class="menu-topo">
-    <img src="#" alt="Abrir menu" id="menu-btn" class="icon_menu" />
+    <img src="assets/img/svg/menu.svg" alt="Abrir menu" id="menu-btn" class="icon_menu" />
     <nav class="navbar" id="navbar">
-      <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close" />
-      <a href="/assets/home.html" class="link_menu">
-        <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/home.svg" alt="Home" class="icon_menu" /> INÍCIO
+      <img src="assets/img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close" />
+
+      <a href="home.html" class="link_menu">
+        <img src="assets/img/svg/home.svg" alt="Home" class="icon_menu" /> INÍCIO
       </a>
-      <a href="/assets/projetos.html" class="link_menu">
-        <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/projects.svg" alt="Projetos" class="icon_menu" /> PROJETOS
+      <a href="projetos.html" class="link_menu">
+        <img src="assets/img/svg/projects.svg" alt="Projetos" class="icon_menu" /> PROJETOS
       </a>
-      <a href="/assets/habilidades.html" class="link_menu">
-        <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/keyboard.svg" alt="Habilidades" class="icon_menu" /> HABILIDADES
+      <a href="habilidades.html" class="link_menu">
+        <img src="assets/img/svg/keyboard.svg" alt="Habilidades" class="icon_menu" /> HABILIDADES
       </a>
-      <a href="/assets/experiencia.html" class="link_menu">
-        <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/work.svg" alt="Experiência" class="icon_menu" /> EXPERIÊNCIA
+      <a href="experiencia.html" class="link_menu">
+        <img src="assets/img/svg/work.svg" alt="Experiência" class="icon_menu" /> EXPERIÊNCIA
       </a>
     </nav>
     <label class="switch">
@@ -31,40 +36,42 @@
       <span class="slider round"></span>
     </label>
   </header>
+
   <div id="painel-animado">
-  <div class="sheep-container">
-    <img class="sheep-sprite" />
-    <img class="sheep-sprite" />
-    <img class="sheep-sprite" />
-    <img class="sheep-sprite" />
-    <img class="sheep-sprite" />
-    <img class="sheep-sprite" />
-    <img class="sheep-sprite" />
-    <img class="sheep-sprite" />
-    <img class="sheep-sprite" />
+    <div class="sheep-container">
+      <img class="sheep-sprite" />
+      <img class="sheep-sprite" />
+      <img class="sheep-sprite" />
+      <img class="sheep-sprite" />
+      <img class="sheep-sprite" />
+      <img class="sheep-sprite" />
+      <img class="sheep-sprite" />
+      <img class="sheep-sprite" />
+      <img class="sheep-sprite" />
+    </div>
   </div>
-</div>
+
   <div class="fb"></div>
 
- <main class="habilidades">
-  <h2>Minhas Habilidades</h2>
+  <main class="habilidades">
+    <h2>Minhas Habilidades</h2>
 
-  <div class="tipo-habilidade">
-    <span id="btn-hard" class="btn-habilidade active">Hard Skills</span>
-    <span id="btn-soft" class="btn-habilidade">Soft Skills</span>
-  </div>
+    <div class="tipo-habilidade">
+      <span id="btn-hard" class="btn-habilidade active">Hard Skills</span>
+      <span id="btn-soft" class="btn-habilidade">Soft Skills</span>
+    </div>
 
-  <div id="painel-hard" class="painel">
-    <!-- conteúdo hard aqui -->
-  </div>
+    <div id="painel-hard" class="painel">
+      <!-- conteúdo hard aqui -->
+    </div>
 
-  <div id="painel-soft" class="painel hidden">
-    <!-- conteúdo soft aqui -->
-  </div>
-</main>
+    <div id="painel-soft" class="painel hidden">
+      <!-- conteúdo soft aqui -->
+    </div>
+  </main>
 
-
-  <script src="https://github.com/lumens7/SitePessoal/tree/main/assets/js/habilidades.js"></script>
-  <script src="https://github.com/lumens7/SitePessoal/tree/main/assets/js/menu.js"></script>
+  <!-- JS -->
+  <script src="assets/js/habilidades.js"></script>
+  <script src="assets/js/menu.js"></script>
 </body>
 </html>
