--- a/assets/home.html
+++ b/assets/home.html
@@ -3,29 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LUMENS - INICIO</title>
-  <link rel="icon" type="image/x-icon" href="https://github.com/lumens7/SitePessoal/tree/main/assets/img/logo_icon.ico" />
-  <link rel="stylesheet" href="https://github.com/lumens7/SitePessoal/tree/main/assets/css/menu.css" />
-  <link rel="stylesheet" href="https://github.com/lumens7/SitePessoal/tree/main/assets/css/style_home.css" />
+  <title>LUMENS - INÍCIO</title>
+  <link rel="icon" type="image/x-icon" href="assets/img/logo_icon.ico" />
+  <link rel="stylesheet" href="assets/css/menu.css" />
+  <link rel="stylesheet" href="assets/css/style_home.css" />
 </head>
 <body>
 
   <header class="menu-topo">
-    <img src="#" alt="Abrir menu" id="menu-btn" class="icon_menu" />
+    <img src="assets/img/svg/menu.svg" alt="Abrir menu" id="menu-btn" class="icon_menu" />
 
     <nav class="navbar" id="navbar">
-      <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close" />
+      <img src="assets/img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close" />
       <a href="assets/home.html" class="link_menu">
-        <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/home.svg" alt="Home" class="icon_menu" /> INÍCIO
+        <img src="assets/img/svg/home.svg" alt="Home" class="icon_menu" /> INÍCIO
       </a>
       <a href="assets/projetos.html" class="link_menu">
-        <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/projects.svg" alt="Projetos" class="icon_menu" /> PROJETOS
+        <img src="assets/img/svg/projects.svg" alt="Projetos" class="icon_menu" /> PROJETOS
       </a>
       <a href="assets/habilidades.html" class="link_menu">
-        <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/keyboard.svg" alt="Habilidades" class="icon_menu" /> HABILIDADES
+        <img src="assets/img/svg/keyboard.svg" alt="Habilidades" class="icon_menu" /> HABILIDADES
       </a>
       <a href="assets/experiencia.html" class="link_menu">
-        <img src="https://github.com/lumens7/SitePessoal/tree/main/assets/img/svg/work.svg" alt="Experiência" class="icon_menu" /> EXPERIÊNCIA
+        <img src="assets/img/svg/work.svg" alt="Experiência" class="icon_menu" /> EXPERIÊNCIA
       </a>
     </nav>
 
@@ -47,7 +47,7 @@
     <!-- Seções de valores inseridas via JS -->
   </main>
 
-  <script src="https://github.com/lumens7/SitePessoal/tree/main/assets/js/menu.js"></script>
-  <script src="https://github.com/lumens7/SitePessoal/tree/main/assets/js/home.js"></script>
+  <script src="assets/js/menu.js"></script>
+  <script src="assets/js/home.js"></script>
 </body>
 </html>
