--- a/assets/projetos.html
+++ b/assets/projetos.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header class="menu-topo">
-    <img src="assets/img/svg/menu.svg" alt="Abrir menu" id="menu-btn" class="icon_menu" />
+    <img src="assets/img/svg/menu_dark_mode.svg" alt="Abrir menu" id="menu-btn" class="icon_menu" />
     <nav class="navbar" id="navbar">
       <img src="assets/img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close">
 
