--- a/assets/home.html
+++ b/assets/home.html
@@ -11,7 +11,7 @@
 <body>
 
   <header class="menu-topo">
-    <img src="assets/img/svg/menu.svg" alt="Abrir menu" id="menu-btn" class="icon_menu" />
+    <img src="assets/img/svg/menu_dark_mode.svg" alt="Abrir menu" id="menu-btn" class="icon_menu" />
 
     <nav class="navbar" id="navbar">
       <img src="assets/img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close" />
