--- a/assets/experiencia.html
+++ b/assets/experiencia.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LUMENS - HABILIDADES</title>
-  <link rel="icon" type="image/x-icon" href="https://lumens7.github.io/SitePessoal/assets/img/logo_icon.ico" />
-  <link rel="stylesheet" href="https://lumens7.github.io/SitePessoal/assets/css/menu.css" />
-  <link rel="stylesheet" href="https://lumens7.github.io/SitePessoal/assets/css/experiencia.css" />
+  <link rel="icon" type="image/x-icon" href="assets/img/logo_icon.ico" />
+  <link rel="stylesheet" href="assets/css/menu.css" />
+  <link rel="stylesheet" href="assets/css/experiencia.css" />
 </head>
 <body>
   <header class="menu-topo">
-    <img src="https://lumens7.github.io/SitePessoal/assets/img/svg/menu_dark_mode.svg" alt="Abrir menu" id="menu-btn" class="icon_menu" />
+    <img src="assets/img/svg/menu_dark_mode.svg" alt="Abrir menu" id="menu-btn" class="icon_menu" />
     <nav class="navbar" id="navbar">
-      <img src="https://lumens7.github.io/SitePessoal/assets/img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close" />
-      <a href="/SitePessoal/assets/home.html" class="link_menu">
-        <img src="https://lumens7.github.io/SitePessoal/assets/img/svg/home.svg" alt="Home" class="icon_menu" /> INÍCIO
+      <img src="assets/img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close" />
+      <a href="assets/home.html" class="link_menu">
+        <img src="assets/img/svg/home.svg" alt="Home" class="icon_menu" /> INÍCIO
       </a>
-      <a href="/SitePessoal/assets/projetos.html" class="link_menu">
-        <img src="https://lumens7.github.io/SitePessoal/assets/img/svg/projects.svg" alt="Projetos" class="icon_menu" /> PROJETOS
+      <a href="assets/projetos.html" class="link_menu">
+        <img src="assets/img/svg/projects.svg" alt="Projetos" class="icon_menu" /> PROJETOS
       </a>
-      <a href="/SitePessoal/assets/habilidades.html" class="link_menu">
-        <img src="https://lumens7.github.io/SitePessoal/assets/img/svg/keyboard.svg" alt="Habilidades" class="icon_menu" /> HABILIDADES
+      <a href="assets/habilidades.html" class="link_menu">
+        <img src="assets/img/svg/keyboard.svg" alt="Habilidades" class="icon_menu" /> HABILIDADES
       </a>
-      <a href="/SitePessoal/assets/experiencia.html" class="link_menu">
-        <img src="https://lumens7.github.io/SitePessoal/assets/img/svg/work.svg" alt="Experiência" class="icon_menu" /> EXPERIÊNCIA
+      <a href="assets/experiencia.html" class="link_menu">
+        <img src="assets/img/svg/work.svg" alt="Experiência" class="icon_menu" /> EXPERIÊNCIA
       </a>
     </nav>
     <label class="switch">
@@ -39,7 +39,7 @@
     <div class="experiencias-container" id="experiencias-container"></div>
   </section>
 
-  <script src="https://lumens7.github.io/SitePessoal/assets/js/menu.js"></script>
-  <script src="https://lumens7.github.io/SitePessoal/assets/js/experiencia.js"></script>
+  <script src="assets/js/menu.js"></script>
+  <script src="assets/js/experiencia.js"></script>
 </body>
 </html>
