--- a/assets/home.html
+++ b/assets/home.html
@@ -4,28 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LUMENS - INÍCIO</title>
-  <link rel="icon" type="image/x-icon" href="/img/logo_icon.ico" />
-  <link rel="stylesheet" href="/css/menu.css" />
-  <link rel="stylesheet" href="/css/style_home.css" />
+  <link rel="icon" type="image/x-icon" href="img/logo_icon.ico" />
+  <link rel="stylesheet" href="css/menu.css" />
+  <link rel="stylesheet" href="css/style_home.css" />
 </head>
 <body>
 
   <header class="menu-topo">
-    <img src="/img/svg/menu_dark_mode.svg" alt="Abrir menu" id="menu-btn" class="icon_menu" />
+    <img src="img/svg/menu_dark_mode.svg" alt="Abrir menu" id="menu-btn" class="icon_menu" />
 
     <nav class="navbar" id="navbar">
-      <img src="/img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close" />
-      <a href="/home.html" class="link_menu">
-        <img src="assets/img/svg/home.svg" alt="Home" class="icon_menu" /> INÍCIO
+      <img src="img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close" />
+      <a href="home.html" class="link_menu">
+        <img src="img/svg/home.svg" alt="Home" class="icon_menu" /> INÍCIO
       </a>
-      <a href="/projetos.html" class="link_menu">
-        <img src="assets/img/svg/projects.svg" alt="Projetos" class="icon_menu" /> PROJETOS
+      <a href="projetos.html" class="link_menu">
+        <img src="img/svg/projects.svg" alt="Projetos" class="icon_menu" /> PROJETOS
       </a>
-      <a href="/habilidades.html" class="link_menu">
-        <img src="/img/svg/keyboard.svg" alt="Habilidades" class="icon_menu" /> HABILIDADES
+      <a href="habilidades.html" class="link_menu">
+        <img src="img/svg/keyboard.svg" alt="Habilidades" class="icon_menu" /> HABILIDADES
       </a>
-      <a href="/experiencia.html" class="link_menu">
-        <img src="/img/svg/work.svg" alt="Experiência" class="icon_menu" /> EXPERIÊNCIA
+      <a href="experiencia.html" class="link_menu">
+        <img src="img/svg/work.svg" alt="Experiência" class="icon_menu" /> EXPERIÊNCIA
       </a>
     </nav>
 
@@ -47,7 +47,7 @@
     <!-- Seções de valores inseridas via JS -->
   </main>
 
-  <script src="/js/menu.js"></script>
-  <script src="/js/home.js"></script>
+  <script src="js/menu.js"></script>
+  <script src="js/home.js"></script>
 </body>
 </html>
