--- a/assets/habilidades.html
+++ b/assets/habilidades.html
@@ -6,29 +6,29 @@
   <title>LUMENS - HABILIDADES</title>
 
   <!-- Ícone -->
-  <link rel="icon" href="assets/img/logo_icon.ico" type="image/x-icon">
+  <link rel="icon" href="img/logo_icon.ico" type="image/x-icon">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="assets/css/menu.css" />
-  <link rel="stylesheet" href="assets/css/habilidades.css" />
+  <link rel="stylesheet" href="css/menu.css" />
+  <link rel="stylesheet" href="css/habilidades.css" />
 </head>
 <body>
   <header class="menu-topo">
-    <img src="assets/img/svg/menu_dark_mode.svg" alt="Abrir menu" id="menu-btn" class="icon_menu" />
+    <img src="img/svg/menu_dark_mode.svg" alt="Abrir menu" id="menu-btn" class="icon_menu" />
     <nav class="navbar" id="navbar">
-      <img src="assets/img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close" />
+      <img src="img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close" />
 
       <a href="home.html" class="link_menu">
-        <img src="assets/img/svg/home.svg" alt="Home" class="icon_menu" /> INÍCIO
+        <img src="img/svg/home.svg" alt="Home" class="icon_menu" /> INÍCIO
       </a>
       <a href="projetos.html" class="link_menu">
-        <img src="assets/img/svg/projects.svg" alt="Projetos" class="icon_menu" /> PROJETOS
+        <img src="img/svg/projects.svg" alt="Projetos" class="icon_menu" /> PROJETOS
       </a>
       <a href="habilidades.html" class="link_menu">
-        <img src="assets/img/svg/keyboard.svg" alt="Habilidades" class="icon_menu" /> HABILIDADES
+        <img src="img/svg/keyboard.svg" alt="Habilidades" class="icon_menu" /> HABILIDADES
       </a>
       <a href="experiencia.html" class="link_menu">
-        <img src="assets/img/svg/work.svg" alt="Experiência" class="icon_menu" /> EXPERIÊNCIA
+        <img src="img/svg/work.svg" alt="Experiência" class="icon_menu" /> EXPERIÊNCIA
       </a>
     </nav>
     <label class="switch">
@@ -71,7 +71,7 @@
   </main>
 
   <!-- JS -->
-  <script src="assets/js/habilidades.js"></script>
-  <script src="assets/js/menu.js"></script>
+  <script src="js/habilidades.js"></script>
+  <script src="js/menu.js"></script>
 </body>
 </html>
