--- a/assets/projetos.html
+++ b/assets/projetos.html
@@ -6,29 +6,29 @@
   <title>LUMENS - PROJETOS</title>
 
   <!-- Ícone da aba -->
-  <link rel="icon" type="image/x-icon" href="assets/img/logo_icon.ico">
+  <link rel="icon" type="image/x-icon" href="img/logo_icon.ico">
 
   <!-- Estilos CSS -->
-  <link rel="stylesheet" href="assets/css/menu.css" />
-  <link rel="stylesheet" href="assets/css/projetos.css" />
+  <link rel="stylesheet" href="css/menu.css" />
+  <link rel="stylesheet" href="css/projetos.css" />
 </head>
 <body>
   <header class="menu-topo">
-    <img src="assets/img/svg/menu_dark_mode.svg" alt="Abrir menu" id="menu-btn" class="icon_menu" />
+    <img src="img/svg/menu_dark_mode.svg" alt="Abrir menu" id="menu-btn" class="icon_menu" />
     <nav class="navbar" id="navbar">
-      <img src="assets/img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close">
+      <img src="img/svg/close.svg" alt="Fechar menu" id="close-btn" class="icon_close">
 
-      <a href="assets/home.html" class="link_menu">
-        <img src="assets/img/svg/home.svg" alt="Home" class="icon_menu"> INÍCIO
+      <a href="home.html" class="link_menu">
+        <img src="img/svg/home.svg" alt="Home" class="icon_menu"> INÍCIO
       </a>
-      <a href="assets/projetos.html" class="link_menu">
-        <img src="assets/img/svg/projects.svg" alt="Projetos" class="icon_menu"> PROJETOS
+      <a href="projetos.html" class="link_menu">
+        <img src="img/svg/projects.svg" alt="Projetos" class="icon_menu"> PROJETOS
       </a>
-      <a href="assets/habilidades.html" class="link_menu">
-        <img src="assets/img/svg/keyboard.svg" alt="Habilidades" class="icon_menu"> HABILIDADES
+      <a href="habilidades.html" class="link_menu">
+        <img src="img/svg/keyboard.svg" alt="Habilidades" class="icon_menu"> HABILIDADES
       </a>
-      <a href="assets/experiencia.html" class="link_menu">
-        <img src="assets/img/svg/work.svg" alt="Experiência" class="icon_menu"> EXPERIÊNCIA
+      <a href="experiencia.html" class="link_menu">
+        <img src="img/svg/work.svg" alt="Experiência" class="icon_menu"> EXPERIÊNCIA
       </a>
     </nav>
 
@@ -52,7 +52,7 @@
   </div>
 
   <!-- Scripts JS -->
-  <script src="assets/js/menu.js"></script>
-  <script src="assets/js/projetos.js"></script>
+  <script src="js/menu.js"></script>
+  <script src="js/projetos.js"></script>
 </body>
 </html>
